<resources>
    <string name="app_name">ScarnesDice</string>
    <string name="roll_text">Roll</string>
    <string name="hold_text">Hold</string>
    <string name="reset_text">Reset</string>
    <string name="user_score">Your Score: </string>
    <string name="comp_score">Computer Score: </string>
    <string name="turn_score">Turn Score: </string>
    <string name="image_descrip">Dice Face</string>
    <string name="winner_string">Winner Goes Here</string>
</resources>
