<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_score_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_score"
        android:textSize="@dimen/base_text_size" />

    <TextView
        android:id="@+id/comp_score_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comp_score"
        android:textSize="@dimen/base_text_size" />

    <TextView
        android:id="@+id/turn_score_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_score"
        android:textSize="@dimen/base_text_size" />

    <ImageView
        android:id="@+id/dice_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_descrip"
        app:srcCompat="@drawable/dice1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/roll_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roll_text" />

        <Button
            android:id="@+id/hold_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hold_text" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_text" />
    </LinearLayout>

</LinearLayout>